--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 Core Library
 ============
 
-    g++ -Isrc -std=c++17 src/core/all_test.cpp -o test
+    g++ -I. -std=c++17 core/all_test.cpp -o test
     ./test
 
-    cl -Isrc -std:c++17 src\core\all_test.cpp
+    cl -I. -std:c++17 core\all_test.cpp
     all_test.exe
